# Athena

.opencode/command/: speckit.plan.md
Athena/: pyproject.toml
Athena/Aegis/: __init__.py  config.yaml  main.py
Athena/Aegis/api/: __init__.py  collector.py
Athena/Aegis/core/: bilibili.py  collector.py  config.py  file_import.py  frontmatter.py  service.py
Athena/Aegis/db/: dao.py  models.py
Athena/Aegis/tests/unit/: conftest.py  test_config.py  test_sync.py  test_yaml.py
specs/knowledge-collector/: plan.md  spec.md  tasks.md
specs/knowledge-collector/checklists/: quality.md  requirements.md
